--- a/style.css
+++ b/style.css
@@ -20,9 +20,6 @@ nav{
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-
-
-
 }
 h1{
     text-align: center;
@@ -30,7 +27,11 @@ h1{
     text-decoration-line: underline;
 }
 div.sticky {
-    position: -webkit-sticky; /* Safari */
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
+  }
+  div.static {
+    position: static;
+    border: 3px solid #73AD21;
   }
