--- a/style.css
+++ b/style.css
@@ -1,37 +1,23 @@
-nav{
-
+*{
+   margin: 0px;
+   padding: 0px;
+   box-sizing: border-box;
+   font-family: 'Times New Roman', Times, serif;
 }
-div{
-    text-align:left;
-    font-weight: normal;
+body{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2c3639;
 }
-.background{
-    background-image:url(image.jpg) ;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: top;
-    background-attachment: fixed;
-    backface-visibility: 50%;
+.grid-container{
+    width: 80% ;
+    margin: 100p auto;
+    background-color: #dcd7c9;
+    color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12)0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    display: grid;
+    grid-template-rows: 250px 250px;
 }
-nav{
-    background-color: rgb(122, 139, 13);
-    padding: 20px;
-    font-weight: 700;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-}
-h1{
-    text-align: center;
-    color: white;
-    text-decoration-line: underline;
-}
-div.sticky {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-  }
-  div.static {
-    position: static;
-    border: 3px solid #73AD21;
-  }
