some major changes

--- a/style.css
+++ b/style.css
@@ -1,23 +1,54 @@
-*{
-   margin: 0px;
-   padding: 0px;
-   box-sizing: border-box;
-   font-family: 'Times New Roman', Times, serif;
-}
-body{
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #2c3639;
-}
-.grid-container{
-    width: 80% ;
-    margin: 100p auto;
-    background-color: #dcd7c9;
-    color: #fff;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12)0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    display: grid;
-    grid-template-rows: 250px 250px;
-}
+        *{
+            margin: 0px;
+            padding: 0px;
+            box-sizing: border-box;
+        }
+        html{
+            font-size: 62.5%;
+        }
+        body{
+            height: 100vh;
+            display: grid;
+            place-items: center;
+        }
+
+        .container-image{
+            width: 60vw;
+            height: 50rem;
+            border-radius: 1rem;
+            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+            background-image: url(images/image1.jpg);
+            background-size: cover;
+            animation: gallery 10s linear infinite; 
+        }
+
+        @keyframes gallery{
+            0%{
+                background-image: url(images/image1.jpg);
+            }
+            10%{
+                background-image: url(images/image2.jpeg);
+            }
+            20%{
+                background-image: url(images/image3.jpeg);
+            }
+            30%{
+                background-image: url(images/image4.webp);
+            }
+            40%{
+                background-image: url(images/image5.jpeg);
+            }
+            50%{
+                background-image: url(images/image6.webp);
+            }
+            60%{
+                background-image: url(images/image7.webp);
+            }
+            70%{
+                background-image: url(images/image8.webp);
+            }
+            100%{
+                background-image: url(images/image9.webp);
+            } 
+
+        }
